Fix Card height on small screen size

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -171,6 +171,7 @@ h6 {
       min-width: 100%;
       box-sizing: border-box;
       padding: 1em 0.2em;
+      min-height: 4em;
     }
 
     .value {
